# grpc-examples

./: README.md
Greeter/: readme.md
Greeter/client/client_ts-proto/: package.json
Greeter/client/client_ts-proto/builder/: .gitignore  build.fs  build.fsproj  build.sln
Greeter/client/client_ts-proto/models/: greet.ts
Greeter/client/deno-grpc/: deno.json
Greeter/client/deno-grpc/core/schemas/: greet.d.ts
Greeter/protos/: greet.proto
Greeter/server/Server/: Program.fs  Server.fsproj
Greeter/server/Server/Service/: GreeterService.fs
Greeter/server/fsharp/: Greeter.sln
Greeter/server/fsharp/Server/: Dockerfile  Server.fsproj
Greeter/server/rust/hello_tonic_grpc/: Cargo.toml
Greeter/server/rust/hello_tonic_grpc/src/: client.rs  main.rs  server.rs
